# frax-op-reth

./: Cargo.toml  DockerfileOp  README.md
.github/workflows/: build.debank.yml  build.yml  release.yml
crates/evm/src/: lib.rs  post_exec_ext.rs
crates/node/: Cargo.toml
crates/node/src/: debank.rs  lib.rs  network.rs  node.rs  proof_history.rs  trace.rs
crates/op-evm/src/: lib.rs
crates/op-evm/src/block/: mod.rs
