
[package]
name = "fraxtal-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
fraxtal-chainspec.workspace = true
fraxtal-evm.workspace = true

reth-basic-payload-builder.workspace = true
reth-evm.workspace = true
reth-network.workspace = true
reth-node-api.workspace = true
reth-chainspec.workspace = true
reth-engine-local.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-forks.workspace = true
reth-optimism-node.workspace = true
reth-optimism-payload-builder.workspace = true
reth-optimism-consensus.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-primitives.workspace = true
reth-optimism-rpc.workspace = true
reth-optimism-exex = { workspace = true, features = ["metrics"] }
reth-optimism-trie = { workspace = true, features = ["metrics"] }
reth-payload-builder.workspace = true
reth-provider.workspace = true
reth-revm.workspace = true
reth-rpc-api.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-eth-types.workspace = true
reth-trie.workspace = true
reth-node-builder.workspace = true
reth-db.workspace = true
reth-db-api.workspace = true
reth-tasks.workspace = true
reth-transaction-pool.workspace = true
reth-trie-db.workspace = true
revm.workspace = true
revm-bytecode.workspace = true
revm-inspectors.workspace = true
tracing.workspace = true
eyre.workspace = true
futures.workspace = true
futures-util.workspace = true
tokio.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-genesis.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
op-alloy-consensus.workspace = true
op-alloy-rpc-types.workspace = true
op-alloy-rpc-types-engine.workspace = true
reth-primitives-traits.workspace = true
async-trait.workspace = true
jsonrpsee.workspace = true
serde.workspace = true
sha1.workspace = true
md-5.workspace = true

[features]
default = ["optimism"]
optimism = []
asm-keccak = [
	# "reth-primitives/asm-keccak",
	# "alloy-primitives/asm-keccak",
	# "revm/asm-keccak",
	"reth-optimism-node/asm-keccak",
	# "reth-node-core/asm-keccak"
]
